2002-02-26  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/egg.cc: Delete missile-launcher in remove_this();
	* usecode/ucinternal.cc (public): Find_nearby() now handles case
	where parm. 0 is a 4-elem. array.  Fixes 'destroy trap' spell.

2002-02-25  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/ucsched.cc (Usecode_script): Handle sched. opcode 0x29:
	Wait nn game hours.

	* palettes.h: Define palette names here.
	* tools/ipack.cc (public): Algorithmically create 
	palettes 1-10 used by the Exult engine.

2002-02-24  Jeff Freedman  <jeff@amy.nerble.net>

	* exult.cc: Single-click also sets tile when terrain-editing.

2002-02-22  Jeff Freedman  <jsf@usf-cf-x86-linux-1>

	* shapes/pngio.cc: Rewrote transparency handling; still trying to 
	get it right.

2002-02-22  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* imagewin/ibuf8.cc: used memcpy() on Solaris for ibuf8::copy8

2002-02-22  Jeff Freedman  <jeff@amy.nerble.net>

	* gamemap.cc (Game_map): Always look through all the terrains to
	see if one needs to be saved when map-editing.
	* gamewin.cc: Okay to double-click without pathfinding if map-editing.
	* gamedat.cc: If editing, it's okay if gamedat files don't exist
	when saving.
	* usecode/ucinternal.cc: Assume newly-developed games will have a
	keyring.
	* tools/ipack.cc,shapes/pngio.cc: Get transparency from .png when
	adding to the .vga file.

2002-02-21  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* Makefile.am: directory order again. tools depends on shapes&imagewin

2002-02-21  Darke  <darkepaw@users.sourceforge.net>
	* usecode/ucxt/Makefile.am: Fixed a problem with it not creating
	the intrinsics data files.

2002-02-20  Jeff Freedman  <jsf@usf-cf-x86-linux-1>

	* shapes/vgafile.h (public): Public encode_rle() added.
	* tools/ipack.cc:  Coding 'Create()'.

2002-02-20  Ryan Nunn  <triforce@merlin.net.au>
	* actors.cc : Fixing Serpent Isle change of portrait bug. Polymorphing 